--- a/ProyectoAPI/ProyectoAPI.csproj
+++ b/ProyectoAPI/ProyectoAPI.csproj
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
+  </ItemGroup>
+
+<ItemGroup>
+<Folder Include="Data\" />
+
   </ItemGroup>
 
 </Project>
