--- a/ProyectoAPI/appsettings.json
+++ b/ProyectoAPI/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SQLiteConnection": "Data Source=dating.db;"
+  }
 }
